--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <EditText
         android:id="@+id/etNombreUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/etNombreUsuario"
-        android:layout_marginTop="@dimen/etNombreUsuarioMarginTopBottom"
+        android:layout_gravity="center"
         android:layout_marginBottom="@dimen/etNombreUsuarioMarginTopBottom"
         android:layout_marginLeft="@dimen/etNombreUsuarioMarginLeftRight"
         android:layout_marginRight="@dimen/etNombreUsuarioMarginLeftRight"
-        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/etNombreUsuarioMarginTopBottom"
         android:gravity="center"
-        android:textColor="@color/etColorTextFormLogin"/>
+        android:hint="@string/etNombreUsuario"
+        android:textColor="@color/etColorTextFormLogin" />
 
     <EditText
         android:id="@+id/etClaveUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Ingrese Clave"
-        android:layout_marginTop="@dimen/etClaveUsuarioMarginTopBottom"
+        android:layout_gravity="center"
         android:layout_marginBottom="@dimen/etClaveUsuarioMarginTopBottom"
         android:layout_marginLeft="@dimen/etClaveUsuarioMarginLeftRight"
         android:layout_marginRight="@dimen/etClaveUsuarioMarginLeftRight"
-        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/etClaveUsuarioMarginTopBottom"
         android:gravity="center"
-        android:textColor="@color/etColorTextFormLogin"
-        android:password="true"/>
+        android:hint="Ingrese Clave"
+        android:password="true"
+        android:textColor="@color/etColorTextFormLogin" />
 
 
     <Button
@@ -40,10 +40,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/btLoginMarginTopBottom"
-        android:layout_marginTop="@dimen/btLoginMarginTopBottom"
-        android:layout_marginRight="@dimen/btLoginMarginLeftRight"
         android:layout_marginLeft="@dimen/btLoginMarginLeftRight"
-        android:gravity="center"
+        android:layout_marginRight="@dimen/btLoginMarginLeftRight"
+        android:layout_marginTop="@dimen/btLoginMarginTopBottom"
         android:background="#009688"
-        android:text="@string/btLogin"/>
+        android:gravity="center"
+        android:text="@string/btLogin" />
 </LinearLayout>
